removing python and java

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -45,7 +45,7 @@
       <h2>Code in Multiple Languages</h2>
       <div class="underline-large"></div>
       <p>
-        CodeWave supports a variety of programming languages like Javascript , Python , HTML , CSS to fit your project
+        CodeWave supports a variety of programming languages like Javascript , HTML , CSS to fit your project
         needs. Choose a language to see a sample code snippet.
       </p>
 
@@ -54,8 +54,7 @@
         <button class="lang-btn" data-lang="html">HTML</button>
         <button class="lang-btn" data-lang="css">CSS</button>
         <button class="lang-btn" data-lang="js">JavaScript</button>
-        <button class="lang-btn" data-lang="python">Python</button>
-        <button class="lang-btn" data-lang="java">Java</button>
+       
       </div>
 
       <!-- Code Display Area -->
@@ -80,20 +79,7 @@
     console.log("Hello, World!");
             </pre
         >
-        <pre id="python-code" class="code-snippet" style="display: none">
-    # Python Code Example
-    print("Hello, World!")
-            </pre
-        >
-        <pre id="java-code" class="code-snippet" style="display: none">
-    // Java Code Example
-    public class HelloWorld {
-        public static void main(String[] args) {
-            System.out.println("Hello, World!");
-        }
-    }
-            </pre
-        >
+       
       </div>
     </div>
 
