--- a/HTML/main.html
+++ b/HTML/main.html
@@ -22,7 +22,8 @@
           <li><a href="main.html">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#features">Features</a></li>
-          <li><a href="index.html">Start Coding</a></li>
+          <li><a href="codeSnippet.html">Code Snippet</a></li>
+          <li style="margin-right: 50px;"><a href="index.html">Start Coding</a></li>
           <button><a href="sign-in.html">Login</a></button>
           <button><a href="sign-up.html">Register</a></button>
         </ul>
