Code Docs page added

--- a/HTML/codeSnippet.html
+++ b/HTML/codeSnippet.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CodeWave - Code Snippet</title>
+  <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
   <link rel="stylesheet" href="/css/main-styles.css" />
+  <link rel="stylesheet" href="/css/codeSnippet-styles.css">
 
 </head>
 <body>
@@ -14,7 +17,7 @@
       <img
         src="/assets/DALL·E 2024-10-21 23.26.32 - A modern and sleek logo for a code editor named 'CodeWave'. The logo should feature a stylized wave symbol that represents flow, integrated with eleme.png"
         alt="CodeWave Logo"
-        height="60"
+        height="60px"
         style="border-radius: 50%"
       />
       <p>CodeWave</p>
@@ -23,8 +26,9 @@
       <ul>
         <li><a href="main.html">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#features">Features</a></li>
+
         <li><a href="codeSnippet.html">Code Snippet</a></li>
+        <li><a href="codeDocs.html">Docs</a></li>
         <li><a href="index.html">Start Coding</a></li>
         <button><a href="sign-in.html">Login</a></button>
         <button><a href="sign-up.html">Register</a></button>
@@ -33,6 +37,21 @@
 
   
   </nav>
+
+  <section class="homeSection">
+
+    <img src="/assets/DALL·E 2024-10-21 23.26.32 - A modern and sleek logo for a code editor named 'CodeWave'. The logo should feature a stylized wave symbol that represents flow, integrated with eleme.png" alt="" height="100px;" style="border-radius: 300px;
+">
+    <h1>
+      Build fast, Responsive sites
+    </h1>
+    <h1 style="margin-right:-340px;margin-top: -30px;">  with CodeWave</h1>
+    <p>Powerful, extensible, and feature-packed frontend toolkit. Build and </p>
+      <p style="width: 1010px;">customize with Sass, utilize prebuilt grid system and components and bring</p>
+<p style="margin-left: 400px;">        projects to life with powerful JavaScript plugins.
+</p>
+<a href="codeDocs.html"><button><i class="fa-solid fa-book-open"></i>Read the docs</button></a>
+  </section>
 
 
 
