--- a/HTML/main.html
+++ b/HTML/main.html
@@ -9,17 +9,29 @@
   <body>
     <nav>
       <div class="logo">
-        <img
-          src="/assets/DALL·E 2024-10-21 23.26.32 - A modern and sleek logo for a code editor named 'CodeWave'. The logo should feature a stylized wave symbol that represents flow, integrated with eleme.png"
-          alt="CodeWave Logo"
-          height="60"
-          style="border-radius: 50px"
-        />
-        <p>CodeWave</p>
+          <img
+              src="/assets/DALL·E 2024-10-21 23.26.32 - A modern and sleek logo for a code editor named 'CodeWave'. The logo should feature a stylized wave symbol that represents flow, integrated with eleme.png"
+              alt="CodeWave Logo"
+              height="60"
+              style="border-radius: 50%"
+          />
+          <p>CodeWave</p>
       </div>
-      
-    
-    </nav>
+      <div class="nav-conntents">
+          <ul>
+              <li><a href="main.html">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#features">Features</a></li>
+              <li><a href="codeSnippet.html">Code Snippet</a></li>
+              <li><a href="index.html">Start Coding</a></li>
+              <button><a href="sign-in.html">Login</a></button>
+              <button><a href="sign-up.html">Register</a></button>
+          </ul>
+      </div>
+
+   
+  </nav>
+
 
     <div class="firstSection">
       <div class="content">
