Adding footer file

--- a/HTML/codeDocs.html
+++ b/HTML/codeDocs.html
@@ -184,7 +184,8 @@
     <div class="first-footer">
       <img src="/assets/DALL·E 2024-10-21 23.26.32 - A modern and sleek logo for a code editor named 'CodeWave'. The logo should feature a stylized wave symbol that represents flow, integrated with eleme.png" alt="" height="50px" style="border-radius: 50px; margin-right: 5px;"><p>CodeWave</p>
     </div>
-    <p >&copy; 2024 | All Rights Reserved | Designed and built with all the love in the world by the Priyatosh Kumar</p>
+    <p >&copy; 2024 | All Rights Reserved | Designed and built with all the love in the world by the Priyatosh Kumar <span style="color: red;font-size: 25px;">♥
+    </span></p>
      </footer>
 
 
