--- a/HTML/codeDocs.html
+++ b/HTML/codeDocs.html
@@ -45,7 +45,7 @@
             <a href="codeDocs.html">Introduction</a>
           </li>
           <p><i class="fa-brands fa-html5"></i> HTML Components:</p>
-          <li><a href="forms.html">Forms</a></li>
+          <li><a href="docs/forms.html">Forms</a></li>
           <li><a href="tables.html">Tables</a></li>
           <li><a href="divs.html">Div</a></li>
           <li><a href="buttons.html">Buttons</a></li>
