Div file completed

--- a/HTML/codeDocs.html
+++ b/HTML/codeDocs.html
@@ -47,7 +47,7 @@
           <p><i class="fa-brands fa-html5"></i> HTML Components:</p>
           <li><a href="docs/forms.html">Forms</a></li>
           <li><a href="tables.html">Tables</a></li>
-          <li><a href="divs.html">Div</a></li>
+          <li><a href="divs.html">Grid</a></li>
           <li><a href="buttons.html">Buttons</a></li>
           <li><a href="images.html">Images</a></li>
           <li><a href="inputs.html">Inputs</a></li>
