Adding emmet feature

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,15 +17,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/xml/xml.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/htmlmixed/htmlmixed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/markdown/markdown.min.js"></script>
-
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/edit/closebrackets.min.js"></script>
     <!-- Include CodeMirror hint addon and necessary files -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/hint/show-hint.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/hint/show-hint.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/hint/show-hint.min.js"></script>
 
     <!-- Language-specific hint files -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/hint/xml-hint.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/hint/css-hint.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/hint/javascript-hint.min.js"></script>
+
+
 
     <!-- Link to the updated styles.css file -->
     <link rel="stylesheet" href="/css/styles.css" />
@@ -46,6 +49,7 @@
                 <li><a href="main.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#features">Features</a></li>
+                <li><a href="../HTML/codeSnippet.html">Code Snippet</a></li>
                 <li><a href="index.html">Start Coding</a></li>
                 <button><a href="sign-in.html">Login</a></button>
                 <button><a href="sign-up.html">Register</a></button>
