--- a/HTML/index.html
+++ b/HTML/index.html
@@ -28,6 +28,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/hint/css-hint.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/hint/javascript-hint.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/addon/comment/comment.min.js"></script>
 
 
     <!-- Link to the updated styles.css file -->
@@ -48,7 +49,7 @@
             <ul>
                 <li><a href="main.html">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#features">Features</a></li>
+                <li><a href="features.html">Features</a></li>
                 <li><a href="../HTML/codeSnippet.html">Code Snippet</a></li>
                 <li><a href="index.html">Start Coding</a></li>
                 <button><a href="sign-in.html">Login</a></button>
