--- a/HTML/codeDocs.html
+++ b/HTML/codeDocs.html
@@ -46,9 +46,9 @@
           </li>
           <p><i class="fa-brands fa-html5"></i> HTML Components:</p>
           <li><a href="docs/forms.html">Forms</a></li>
-          <li><a href="tables.html">Tables</a></li>
-          <li><a href="divs.html">Grid</a></li>
-          <li><a href="buttons.html">Buttons</a></li>
+          <li><a href="docs/tables.html">Tables</a></li>
+          <li><a href="docs/divs.html">Grid</a></li>
+          <li><a href="docs/buttons.html">Buttons</a></li>
           <li><a href="images.html">Images</a></li>
           <li><a href="inputs.html">Inputs</a></li>
           <li><a href="cards.html">Cards</a></li>
