--- a/HTML/main.html
+++ b/HTML/main.html
@@ -21,7 +21,7 @@
           <ul>
               <li><a href="main.html">Home</a></li>
               <li><a href="#">About</a></li>
-              <li><a href="codeDocs.html">Docs</a></li>
+              <li><a href="codeSnippet.html">Code Snippet</a></li>
               <li><a href="index.html">Start Coding</a></li>
               <button><a href="sign-in.html">Login</a></button>
               <button><a href="sign-up.html">Register</a></button>
