--- a/HTML/index.html
+++ b/HTML/index.html
@@ -49,7 +49,7 @@
                 <li><a href="features.html">Features</a></li>
                 <li><a href="../HTML/codeSnippet.html">Code Snippet</a></li>
                 <li><a href="index.html">Start Coding</a></li>
-                <li><button><a href="sign-in.html">Login</a></button></li>
+                <li>  <button style="margin-right: -20px;"><a  href="sign-in.html">Login</a></></li>
                 <li><button><a href="sign-up.html">Register</a></button></li>
             </ul>
         </div>
