--- a/HTML/index.html
+++ b/HTML/index.html
@@ -49,8 +49,9 @@
                 <li><a href="features.html">Features</a></li>
                 <li><a href="../HTML/codeSnippet.html">Code Snippet</a></li>
                 <li><a href="index.html">Start Coding</a></li>
-                <li>  <button style="margin-right: -20px;"><a  href="sign-in.html">Login</a></></li>
-                <li><button><a href="sign-up.html">Register</a></button></li>
+                <li  id="loginButton">  <button style="margin-right: -20px;"><a  href="sign-in.html">Login</a></li>
+                <li id="registerButton"><button><a href="sign-up.html">Register</a></button></li>
+                <li id="logoutButton"><button>Logout</button></li>
                 <button id="toggle-theme">
                     <i class="fas fa-moon" id="moon-icon" style="display: none;"></i>
                     <i class="fas fa-sun" id="sun-icon"></i>
@@ -121,11 +122,15 @@
     </div>
 
     <button id="clear-code">Clear Code</button>
+    <!-- Save Code Button -->
+<button id="saveCodeButton">Save Code</button>
+
 
     <h2>Output:</h2>
     <iframe id="output"></iframe>
 
     <!-- Link to the updated app.js file -->
     <script src="/js/app.js"></script>
+    <script src="/js/logout-handle.js"></script>
 </body>
 </html>
