Logout directed to main.html

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -23,8 +23,10 @@
               <li><a href="#">About</a></li>
               <li><a href="codeSnippet.html">Code Snippet</a></li>
               <li><a href="index.html">Start Coding</a></li>
-              <button><a href="sign-in.html">Login</a></button>
-              <button><a href="sign-up.html">Register</a></button>
+              <button id="loginButton"><a href="sign-in.html">Login</a></button>
+              <button id="registerButton"><a href="sign-up.html">Register</a></button>
+              <li id="logoutButton"><button>Logout</button></li>
+
           </ul>
       </div>
 
@@ -112,5 +114,6 @@
     </div>
   </body>
   <script src="/js/main-script.js"></script>
+  <script src="/js/logout-handle.js"></script>
 
 </html>
