--- a/HTML/sign-up.html
+++ b/HTML/sign-up.html
@@ -60,7 +60,7 @@ document.getElementById('registerForm').addEventListener('submit', async (e) => 
         const data = await response.json();
         if (response.ok) {
             alert('Registered Successfully')
-            window.location.href = 'index.html'; // Example redirect
+            window.location.href = 'main.html'; // Example redirect
 
             // Optionally, redirect or show a success message
         } else {
