--- a/HTML/sign-in.html
+++ b/HTML/sign-in.html
@@ -59,7 +59,7 @@
                     
                     // Optionally redirect or load user-specific data
                     alert(`Login Successfully`)
-                    window.location.href = 'index.html'; // Example redirect
+                    window.location.href = 'main.html'; // Example redirect
                 } else {
             alert(`${data.message}`)
                          
