--- a/HTML/index.html
+++ b/HTML/index.html
@@ -56,6 +56,7 @@
                     <i class="fas fa-moon" id="moon-icon" style="display: none;"></i>
                     <i class="fas fa-sun" id="sun-icon"></i>
                 </button>
+            
                 
             </ul>
         </div>
@@ -121,7 +122,6 @@
         </div>
     </div>
 
-    <button id="saveCodeButton">Save Code</button>
     <button id="clear-code">Clear Code</button>
     <!-- Save Code Button -->
 
@@ -129,6 +129,7 @@
     <h2>Output:</h2>
     <iframe id="output"></iframe>
 
+    <!-- Link to the updated app.js file -->
     <!-- Link to the updated app.js file -->
     <script src="/js/app.js"></script>
     <script src="/js/logout-handle.js"></script>
